--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\mensagem_test.py"
+            "program": "${workspaceFolder}\\christmasMessage.py"
         }
     ]
 }
