--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "vscode_custom_css.imports": [
       "file:///C:/Projetos/synthwave84.css"
       ],
-      "editor.lineHighlightBackground": "#1E1E1EAA"
+      "editor.lineHighlightBackground": "#1E1E1EAA",
+      "vscode_custom_css.policy": true
   }
